Commit of file:///C:/Users/thubbard/Documents/My Projects/PROPS/Content/Resources/Images/Dog_and_his_Burger_Img01.jpg file:///C:/Users/thubbard/Documents/My Projects/PROPS/Content/Topic.htm

--- a/Content/Topic.htm
+++ b/Content/Topic.htm
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="2" MadCap:lastHeight="332" MadCap:lastWidth="624">
+<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="2" MadCap:lastHeight="521" MadCap:lastWidth="624">
     <head>
         <link href="Resources/Stylesheets/Styles.css" rel="stylesheet" type="text/css" />
     </head>
@@ -8,7 +8,7 @@
         <p>Delete this text and replace it with your own content.</p>
         <p>&#160;</p>
         <p>
-            <img src="Resources/Images/MadCap.jpg" />
+            <img src="Resources/Images/Dog_and_his_Burger_Img01.jpg" />
         </p>
     </body>
 </html>
